--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,5 +1,8 @@
 <form class="newTodo grid" id="form">
-    <input type="checkbox" id="form__checkbox" class="newTodo__check"><input type="text" placeholder="Create a new todo.." class="newTodo__input" id="form__text">
+    <div class="newTodo__check-box">
+        <input type="checkbox" id="form__checkbox" class="newTodo__check" aria-label="form__checkbox">
+    </div>
+    <input type="text" placeholder="Create a new todo.." class="newTodo__input" id="form__text" aria-label="form__text">
 </form>
 
 <div class="list">
@@ -20,7 +23,9 @@
 </div>
 
 <p class="filter">
-    <span class="filter-active">All</span><span>Active</span><span>Complete</span>
+    <span class="filter__item filter__active" (click)="filterby('all')">All</span>
+    <span class="filter__item" (click)="filterby('active')">Active</span>
+    <span class="filter__item" (click)="filterby('complete')">Complete</span>
 </p>
 
 <p class="note">Drag and drop to reorder list</p>
