--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,10 +1,4 @@
-<form class="newTodo grid" id="form">
-    <div class="newTodo__check-box">
-        <input type="checkbox" id="form__checkbox" class="newTodo__check" aria-label="form__checkbox">
-    </div>
-    <input type="text" placeholder="Create a new todo.." class="newTodo__input" id="form__text" aria-label="form__text">
-</form>
-
+<app-new-work-form [list]="list" (addItem)="pushToList($event)"></app-new-work-form>
 <div class="list">
     <div class="list__item" *ngFor="let item of list">
         <div class="grid">
@@ -22,10 +16,6 @@
     </p>
 </div>
 
-<p class="filter">
-    <span class="filter__item filter__active" (click)="filterby('all')">All</span>
-    <span class="filter__item" (click)="filterby('active')">Active</span>
-    <span class="filter__item" (click)="filterby('complete')">Complete</span>
-</p>
+<app-list-filters [list]="list" (filterBy)="filter($event)"></app-list-filters>
 
 <p class="note">Drag and drop to reorder list</p>
