--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,5 @@ body{
         background-image: url('assets/images/bg-desktop-dark.jpg');
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
