--- a/src/app/components/list-filters/list-filters.component.html
+++ b/src/app/components/list-filters/list-filters.component.html
@@ -1,5 +1,5 @@
-<p class="filter">
-    <span class="filter__item filter__active" (click)="filterby('all')">All</span>
-    <span class="filter__item" (click)="filterby('active')">Active</span>
-    <span class="filter__item" (click)="filterby('complete')">Complete</span>
+<p class="filter" id="filter">
+    <span class="filter__item filter__active" id="all" (click)="filterby('All')">All</span>
+    <span class="filter__item" (click)="filterby('Active')">Active</span>
+    <span class="filter__item" (click)="filterby('Complete')">Complete</span>
 </p>
