--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -2,7 +2,7 @@
     display: block;
     width: 90%;
     margin: 0 auto;
-    max-width: 324px;
+    max-width: 360px;
 }
 
 .header{
@@ -25,6 +25,10 @@
 @media screen and (min-width:1024px){
     :host{
         width: 50%;
-        max-width: 640px;
+        max-width: 700px;
+    }
+
+    .toogleTheme{
+        cursor: pointer;
     }
 }
