--- a/src/app/components/new-work-form/new-work-form.component.scss
+++ b/src/app/components/new-work-form/new-work-form.component.scss
@@ -2,15 +2,15 @@
 
     display: grid;
     grid-template-columns: 10% 75% 10%;
+    column-gap: .5em;
     align-items: center;
     justify-content: start;
 
-    column-gap: .5em;
     width: 100%;
+    padding: 1em;
     box-sizing: border-box;
 
     background-color: var(--background-item);
-    padding: .5em 1em;
     border-radius: 5px;
 
     margin-bottom: 1em;
@@ -46,6 +46,14 @@
             background: url('/assets/images/icon-check.svg'),linear-gradient(var(--Check));
             background-repeat: no-repeat;
             background-position: center;
+        }
+    }
+}
+
+@media screen and (min-width:1024px){
+    .newTodo{
+        &__check{
+            cursor: pointer;
         }
     }
 }
